--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "name": "lizgram-in-vercel",
   "version": 2,
   "public": true,
-  "build": [
+  "builds": [
     {
       "src": "./app.js",
       "use": "@vercel/node"
