--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,14 @@
   "public": true,
   "builds": [
     {
-      "src": "./app.js",
+      "src": "app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "./app.js"
+      "dest": "app.js"
     }
   ]
 }
